# SPICEtools

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 00-SBDB_Query.ipynb  01-astbsp_download.ipynb  02-CLUT.ipynb  02-Crude_SPICE.ipynb  A1-TLUT.ipynb  README.md  __Tips_for_SPICE.md  abmags_neatm_T1_450_5um.csv  test.mk
src/spicetools/: __init__.py  _version.py  constants.py  fastfunc.py  kernelutil.py  phase.py  queryutil.py  timeutil.py  typeutil.py
src/spicetools/kernels/tests/: spk3200_19991201-20010101_retrieved20240916.bsp
src/spicetools/tests/: spkcvo_test_cases.csv  test_constants.py  test_fastfunc.py  test_kernelutil.py  test_phase.py  test_queryutil.py  test_timeutil.py  test_typeutil.py
